--- a/content/resources/search-resources.html
+++ b/content/resources/search-resources.html
@@ -42,28 +42,27 @@ foot: template/browse-js.html
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Format
+                    images
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                    {% assign mapped_ctypes = site.data.search_resources | map: "format" | join: ";" | remove: ";;" | split: ";" | compact | uniq %}
+                    {% assign mapped_ctypes = site.data.search_resources | map: "images" | join: ";" | remove: ";;" | split: ";" | compact | uniq %}
                         {% for c in mapped_ctypes %}
                         <a href="#{{ c }}" class="btn btn-outline-dark btn-sm m-1">{{ c }}</a>
                         {% endfor %}
-                    
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    type
+                    audio
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                    {% assign mapped_ctypes = site.data.search_resources | map: "type" | join: ";" | remove: ";;" | split: ";" | compact | uniq %}
+                    {% assign mapped_ctypes = site.data.search_resources | map: "audio" | join: ";" | remove: ";;" | remove: "; ;" |split: ";" | compact | uniq %}
                         {% for c in mapped_ctypes %}
                         <a href="#{{ c }}" class="btn btn-outline-dark btn-sm m-1">{{ c }}</a>
                         {% endfor %}
@@ -73,12 +72,42 @@ foot: template/browse-js.html
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    focus
+                    video
                     </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                    {% assign mapped_ctypes = site.data.search_resources | map: "video" | join: ";" | remove: ";;" | split: ";" | compact | sort | uniq %}
+                        {% for c in mapped_ctypes %}
+                        <a href="#{{ c }}" class="btn btn-outline-dark btn-sm m-1">{{ c }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    focus
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
                     {% assign mapped_ctypes = site.data.search_resources | map: "focus" | join: ";" | remove: ";;" | split: ";" | compact | sort | uniq %}
+                        {% for c in mapped_ctypes %}
+                        <a href="#{{ c }}" class="btn btn-outline-dark btn-sm m-1">{{ c }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFive">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    regional archive examples
+                    </button>
+                </h2>
+                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                    {% assign mapped_ctypes = site.data.search_resources | map: "regional archive examples" | join: ";" | remove: ";;" | split: ";" | compact | sort | uniq %}
                         {% for c in mapped_ctypes %}
                         <a href="#{{ c }}" class="btn btn-outline-dark btn-sm m-1">{{ c }}</a>
                         {% endfor %}
